[gd_scene load_steps=3 format=3 uid="uid://bhgl7s2tm8y2"]

[ext_resource type="Script" path="res://Scenes/MainMenu/MainMenu.gd" id="1_afnfm"]
[ext_resource type="Texture2D" uid="uid://bgpxat2opxpnj" path="res://Assets/Images/Placeholders/TitleBackground.png" id="1_r71jo"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_afnfm")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_r71jo")

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -46.0
offset_right = 294.0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Version 0.0"

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -220.0
offset_right = 200.0
offset_bottom = -84.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="NewGameButton" type="Button" parent="Menu"]
layout_mode = 2
text = "new_game_button"

[node name="ContinueButton" type="Button" parent="Menu"]
layout_mode = 2
text = "continue_button"

[node name="SettingsButton" type="Button" parent="Menu"]
layout_mode = 2
text = "settings_button"

[node name="ExitButton" type="Button" parent="Menu"]
layout_mode = 2
text = "exit_button"

[node name="LanguageSelector" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -219.0
offset_top = -51.0
offset_right = -11.0
offset_bottom = -12.0
grow_horizontal = 0
grow_vertical = 0
